[gd_scene load_steps=8 format=3 uid="uid://b11xiyik10j7i"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="1_o3m6m"]
[ext_resource type="Script" path="res://scripts/menus/reward_panel.gd" id="2_fcpgo"]
[ext_resource type="Texture2D" uid="uid://b07b3t04115ub" path="res://graphics/items/gold_coin.png" id="3_8gyhb"]
[ext_resource type="Texture2D" uid="uid://l1mon0vxhkb5" path="res://graphics/ui/sprite_button_focused.png" id="5_7fc30"]
[ext_resource type="Texture2D" uid="uid://id2gjt271bko" path="res://graphics/ui/ui_target_unselected.png" id="5_g8ncl"]
[ext_resource type="PackedScene" uid="uid://dhtlgjfm14evh" path="res://prefabs/ui/texture_sfx_button.tscn" id="6_u8tpu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4ij35"]

[node name="RewardPanel" type="Panel" groups=["RewardPanel"]]
custom_minimum_size = Vector2(0, 50)
offset_right = 880.0
offset_bottom = 50.0
mouse_filter = 1
theme = ExtResource("1_o3m6m")
theme_override_styles/panel = SubResource("StyleBoxEmpty_4ij35")
script = ExtResource("2_fcpgo")

[node name="Exp" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(203, 26)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.0
offset_right = 203.0
offset_bottom = 15.0
grow_vertical = 2
mouse_filter = 1
bbcode_enabled = true
text = "[right]234,567,890 Exp.[/right]"
fit_content = true
scroll_active = false

[node name="GoldGroup" type="Control" parent="."]
custom_minimum_size = Vector2(128, 70)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -154.0
offset_top = -10.0
offset_right = -26.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GoldGroup"]
custom_minimum_size = Vector2(32, 70)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 32.0
grow_vertical = 2
alignment = 1

[node name="SpriteControl" type="Control" parent="GoldGroup/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 1

[node name="GoldSprite" type="Sprite2D" parent="GoldGroup/VBoxContainer/SpriteControl"]
position = Vector2(16, 16)
scale = Vector2(2, 2)
texture = ExtResource("3_8gyhb")

[node name="Gold" type="RichTextLabel" parent="GoldGroup"]
clip_contents = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -11.0
offset_right = 126.0
offset_bottom = 15.0
grow_vertical = 2
mouse_filter = 1
text = "456,789"
fit_content = true

[node name="ItemGroup" type="Control" parent="."]
custom_minimum_size = Vector2(256, 70)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -413.0
offset_top = -35.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1

[node name="ItemSpriteButton" parent="ItemGroup" instance=ExtResource("6_u8tpu")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
grow_vertical = 2
texture_normal = ExtResource("5_g8ncl")
texture_focused = ExtResource("5_7fc30")
stretch_mode = 0

[node name="ItemName" type="RichTextLabel" parent="ItemGroup"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 36.0
offset_top = -11.0
offset_right = 413.0
offset_bottom = 15.0
grow_vertical = 2
mouse_filter = 1
text = "Item Name Goes Here x999"
fit_content = true
scroll_active = false

[node name="NoRewardsLabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center]No Rewards...[/center]"
fit_content = true

[connection signal="pressed" from="ItemGroup/ItemSpriteButton" to="." method="_on_item_sprite_button_pressed"]
